package br.gov.sp.fatec.presensor.dto;

import lombok.Getter;

@Getter
public class AlunoLogin {

    private String email;
    private String senha;

}
